# genetic-tree-miner-thesis

./: .gitignore  .gitmodules  GTM.py  LICENSE  README.md  analysis.py  analysis.tex  analyze_eventlogs.py  analyze_storage.py  benchmark.py  benchmark_fitness.py  benchmark_precision.py  best_parameters.csv  best_parameters_all_datasets.csv  controlled_scenarios_experiments.py  convert_bpmn_to_pnml.py  csv_test.py  experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  experiment_5.py  experiment_6.py  experiment_7.py  genetic_miner_benchmark.py  hyperparameter_tuning.py  inductive_random_comparison.py  investigate_ftr.py  optuna_results.csv  pre_suf_calculator.py  profile_results.prof  real_life_datasets_analysis.csv  real_life_datasets_analysis.tex  real_life_datasets_experiments.py  requirements.txt  run.py  splitminer_results.py  test.py  test_real_logs.py  test_seq.py
benchmark_results/: pm4py_suffix_caching.csv  pm4py_without_caching.csv
best_params/: 2012.csv  2013-cp.csv  2013-i.csv  2013-op.csv  2015-1.csv  2015-2.csv  2015-4.csv  2015-5.csv  2017.csv  2019.csv  2020-dd.csv  2020-id.csv  2020-pl.csv  2020-ptc.csv  2020-rfp.csv  BPI_Challenge_2013_closed_problems-optuna-best-params.csv  BPI_Challenge_2013_closed_problems.csv  BPI_Challenge_2013_incidents-optuna-best-params.csv  BPI_Challenge_2013_open_problems-optuna-best-params.csv  BPI_Challenge_2013_open_problems.csv  Nasa.csv  RTF.csv  Road_Traffic_Fine_Management-optuna-best-params.csv  Sepsis-optuna-best-params.csv  Sepsis.csv  analyze.py  db2012.sqlite3  db2013-cp.sqlite3  db2013-i.sqlite3  db2013-op.sqlite3  db2015-1.sqlite3  db2015-2.sqlite3  db2015-3.sqlite3  db2015-4.sqlite3  db2015-5.sqlite3  db2017.sqlite3  db2019.sqlite3  db2020-dd.sqlite3  db2020-id.sqlite3  db2020-pl.sqlite3  (+6 more)
controlled_scenarios/: generate.py
experiment_1/: aggregated_results.tex  current_final_results.csv  final_results.tex  results.csv  results.tex  results_all.csv  results_all.tex  results_all_test.tex  results_genetic.csv  results_genetic_5_runs.csv  results_inductive.csv  results_inductive.tex  results_split.csv
experiment_2/: experiment_2.csv
experiment_4/: experiment_4_results.csv
figures/: Untitled Diagram.drawio  process_tree_example.drawio  table_1.tex  table_2.csv  table_2.tex  table_2_aggregated.tex
src/FastTokenBasedReplay/: CMakeLists.txt  Eventlog.hpp  FitnessResult.hpp  PetriNet.hpp  bindings.cpp  token_based_replay.hpp
src/FastTokenBasedReplay/src/: ActivityCache.hpp  Eventlog.hpp  Graph.hpp  HyperGraph.hpp  Marking.hpp  PetriNet.hpp  Place.hpp  PrefixTree.hpp  SuffixTree.hpp  bindings.cpp  main.cpp  precision.cpp  silent_transition_handling.cpp  token_based_replay.cpp  token_based_replay.hpp
src/FastTokenBasedReplay/tests/: main.cpp
src/FastTokenBasedReplay/tests/src/: test_hyper_graph.cpp  test_no_caching.cpp  test_precision.cpp  test_prefix.cpp  test_prefix_and_suffix.cpp  test_prefix_tree.cpp  test_silent_graph.cpp  test_silent_transition_handling.cpp  test_suffix.cpp
(+1032 files in other folders)
